2008-08-05	Xudong Guan <xudong.guan@criticalsoftware.com>

	PR 1212/cpukit
	* Makefile.am, configure.ac: Time slicing will not happen if the task
	mode is changed from a non-timeslicing mode to timeslicing mode if it
	is done by the executing thread (e.g. in its task body). This change
	includes sp44 to demonstrate the problem and verify the correction.
	* sp44/.cvsignore, sp44/Makefile.am, sp44/init.c, sp44/sp44.scn: New files.

2008-07-17	Joel Sherrill <joel.sherrill@oarcorp.com>

	* sp09/screen09.c: Do not use Simple Vectored Interrupt calls on
	architectures they are not supported on.

2008-07-16	Joel Sherrill <joel.sherrill@oarcorp.com>

	* sp43/init.c, sp43/sp43.scn: Add call to rtems_get_version_string().

2008-06-30	Ralf Corsépius <ralf.corsepius@rtems.org>

	* sp36/strict_order_mut.c: Reflect __STRICT_ORDER_MUTEX__ having
	  been renamed into __RTEMS_STRICT_ORDER_MUTEX__.

2008-06-05	Joel Sherrill <joel.sherrill@OARcorp.com>

	* sp28/init.c: Corrections to configuration.
	* sp37/init.c: Correctly invoke rtems_interrupt_disable() body.
	* spsize/size.c: _ISR_Vector_table only exists on architectures
	which use the Simple Vectored Interrupt Model.

2008-06-02	Joel Sherrill <joel.sherrill@oarcorp.com>

	* spsize/size.c: Convention calls for leading underscore on private
	RTEMS variables.

2008-05-12	Joel Sherrill <joel.sherrill@OARcorp.com>

	* spfatal/fatal.c, spfatal06/testcase.h, spfatal07/testcase.h,
	spfatal08/testcase.h, spfatal09/testcase.h, spfatal10/testcase.h:
	Refactored and renamed initialization routines to
	rtems_initialize_data_structures, rtems_initialize_before_drivers,
	rtems_initialize_device_drivers, and
	rtems_initialize_start_multitasking. This opened the sequence up so
	that bootcard() could provide a more robust and flexible framework
	which is easier to explain and understand. This also lays the
	groundwork for sharing the division of available memory between the
	RTEMS workspace and heap and the C library initialization across all